--- a/package.json
+++ b/package.json
@@ -61,42 +61,42 @@
     "url": "https://github.com/rudderlabs/rudder-sdk-js.git"
   },
   "dependencies": {
-    "axios-retry": "4.3.0",
-    "ms": "2.1.3",
+    "@lukeed/uuid": "2.0.1",
+    "@ndhoule/defaults": "2.0.1",
+    "@ndhoule/each": "2.0.1",
+    "@ndhoule/extend": "2.0.0",
+    "@preact/signals-core": "1.6.0",
+    "@segment/localstorage-retry": "1.3.0",
+    "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.1.0",
     "axios": "1.7.2",
+    "axios-retry": "4.3.0",
+    "component-each": "0.2.6",
+    "component-emitter": "2.0.0",
     "component-type": "2.0.0",
+    "crypto-es": "2.1.0",
+    "crypto-js": "4.2.0",
+    "deep-object-diff": "1.1.9",
+    "get-value": "3.0.1",
+    "is": "3.3.0",
     "join-component": "1.1.0",
     "lodash.clonedeep": "4.5.0",
-    "lodash.isstring": "4.0.1",
-    "@lukeed/uuid": "2.0.1",
-    "@preact/signals-core": "1.6.0",
-    "ramda": "0.30.0",
-    "storejs": "2.1.0",
-    "@ndhoule/defaults": "2.0.1",
-    "rudder-component-cookie": "0.0.1",
-    "@segment/top-domain": "3.0.1",
-    "crypto-js": "4.2.0",
-    "get-value": "3.0.1",
-    "@ndhoule/each": "2.0.1",
     "lodash.get": "4.4.2",
-    "lodash.isequal": "4.5.0",
-    "obj-case": "0.2.1",
-    "on-body": "0.0.1",
-    "md5": "2.3.0",
-    "is": "3.3.0",
-    "component-each": "0.2.6",
-    "@ndhoule/extend": "2.0.0",
-    "lodash.isundefined": "3.0.1",
     "lodash.isempty": "4.4.0",
+    "lodash.isequal": "4.5.0",
+    "lodash.isstring": "4.0.1",
+    "lodash.isundefined": "3.0.1",
     "lodash.pickby": "4.6.0",
     "lodash.tostring": "4.1.4",
-    "crypto-es": "2.1.0",
-    "component-emitter": "2.0.0",
-    "@segment/localstorage-retry": "1.3.0",
-    "deep-object-diff": "1.1.9",
-    "object-path": "0.11.8"
+    "md5": "2.3.0",
+    "ms": "2.1.3",
+    "obj-case": "0.2.1",
+    "object-path": "0.11.8",
+    "on-body": "0.0.1",
+    "ramda": "0.30.0",
+    "rudder-component-cookie": "0.0.1",
+    "storejs": "2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.24.6",
@@ -128,6 +128,8 @@
     "@rollup/plugin-terser": "0.4.4",
     "@size-limit/file": "11.1.4",
     "@size-limit/webpack": "11.1.4",
+    "@swc-node/register": "^1.9.1",
+    "@swc/core": "^1.5.7",
     "@types/component-emitter": "1.2.14",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.12",
@@ -163,6 +165,7 @@
     "jscpd": "4.0.1",
     "lint-staged": "15.2.5",
     "madge": "7.0.0",
+    "msw": "2.3.0",
     "nx": "19.1.0",
     "patch-package": "8.0.0",
     "prettier": "3.2.5",
@@ -185,8 +188,7 @@
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
     "typescript": "5.4.5",
-    "user-agent-data-types": "0.4.2",
-    "msw": "2.3.0"
+    "user-agent-data-types": "0.4.2"
   },
   "optionalDependencies": {
     "@nx/nx-darwin-arm64": "19.1.0",
